# ArgusGate

./: .env.example  .gitignore  PROJECT_MAP.md  README.md  docker-compose.yml  download_datasets_from_hf.py  generate_diagrams.py  generate_test_cases.py  pyproject.toml  tech.md  translate_with_openai_from_en_to_ru.py
backend/: Dockerfile  pyproject.toml  seed_qdrant.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_app_settings.py  003_notifications_and_training_metrics.py  004_client_applications.py  005_users.py
backend/app/: auth.py  config.py  db.py  deps.py  main.py
backend/app/api/: audit.py  auth.py  client_apps.py  dashboard.py  datasets.py  layer_test.py  layers.py  notifications.py  pipeline_test.py  proxy.py  sessions.py  settings_api.py  signatures.py  system_device.py  training.py  users.py  vectors.py
backend/app/detectors/: base.py  context.py  layer1_normalizer.py  layer2_signatures.py  layer3_vectors.py  layer4_classifier.py  layer5_session.py  layer6_output.py  layer7_judge.py  pipeline.py
backend/app/models/: __init__.py  app_setting.py  client_application.py  detection_event.py  ml_model.py  notification.py  request_log.py  signature.py  training_dataset.py  training_job.py  training_job_metric.py  training_sample.py  user.py
backend/app/providers/: openai_compatible.py
backend/app/schemas/: dashboard.py  detection.py  layer_stats.py  request.py  session.py  signature.py  training.py  user.py
backend/app/services/: canary.py  category_whitelist.py  (+14 more)
backend/scripts/: run_tests_and_seed.sh  seed_rag.py
backend/tests/: conftest.py  test_core.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_layer6.py  test_layer7.py  test_pipeline.py
(+116 files in other folders)
