[project]
name = "argusgate-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "msgpack>=1.1.0",
    "qdrant-client>=1.13.0",
    "sentence-transformers>=3.3.0",
    "optimum[onnxruntime]>=1.23.0",
    "onnxruntime>=1.20.0",
    "transformers>=4.47.0",
    "peft>=0.14.0",
    "torch>=2.5.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "scikit-learn>=1.6.0",
    "pyahocorasick>=2.1.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.8.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "anyio>=4.7.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=11.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
